tests/typecheck/bad/fun-not-allowed-to-use-underscore1.scilexp
fun (x : Int32) =>
fun (_ : Int32) =>
  builtin add _ x
